<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_holo_dark"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <QuickContactBadge
                    android:id="@+id/member_edit_quickContactBadge"
                    style="?android:attr/quickContactBadgeStyleWindowMedium"
                    android:layout_margin="@dimen/quickContactMargin"
                    android:src="@drawable/ic_contact_picture_holo_dark" />

                <TextView
                    android:id="@+id/member_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <View
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/up_down_margin_between_items"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allocation_ratio"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                android:text="@string/ratio"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/member_edit_allocPercentageEditText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                android:text="@string/reason"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/member_edit_allocReasonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/member_edit_forEventMemberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <View
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/up_down_margin_between_items"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_notice_to"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioGroup
                    android:id="@+id/member_edit_sendNoticeToRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </RadioGroup>

                <View
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/up_down_margin_between_items"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/member_edit_stateSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/underTitleItemLeftMargin" />

                <View
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/up_down_margin_between_items"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/member_edit_paid_timeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/member_edit_paid_timeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paid_time"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/member_edit_paidDateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/member_edit_paidTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dip"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/member_edit_confirmedBySmsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirmed_by_sms"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView
                        android:id="@+id/member_edit_paid_confirm_messageTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/underTitleItemLeftMargin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/save_discard_delete_buttons" />

    <LinearLayout
        android:id="@+id/advertiseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true" />

</LinearLayout>